--- a/authentication v2/views/index.pug
+++ b/authentication v2/views/index.pug
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.signin
+    h1 Hello !! Welcome to website of me
+    p Hôm nay mình sẽ hướng dẫn các bạn làm chức năng 
+     | Đăng Nhập sử dụng NodeJS và MongoDB
+    div.btn_
+      a(href='/signin') Sign In
+      a(href='/signup') Sign Up
