--- a/authen-with-fb-gg/views/signup.ejs
+++ b/authen-with-fb-gg/views/signup.ejs
@@ -44,9 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" href="">Signup</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
