--- a/authen-with-fb-gg/views/login.ejs
+++ b/authen-with-fb-gg/views/login.ejs
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="d-grid gap-3 mb-3">
-                  <a class="btn btn-lg btn-success" href="/facebook">Continue With Facebook</a>
+                  <a class="btn btn-lg btn-success" href="/auth/facebook">Continue With Facebook</a>
                 </div>
                 <!-- <p>New Here ? <a class="card-link" href="/signup">Register Now</a></p> -->
               </form>
