update login gg,fb and web new

--- a/web-new/views/signup.ejs
+++ b/web-new/views/signup.ejs
@@ -44,9 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link active" href="">Signup</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </div>
@@ -67,7 +67,7 @@
                 <% } %>
 
                     <form action="/signup" method="POST">
-                        <!-- <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <div class="mb-3">
                             <label for="email">Enter Your Email</label>
                             <input type="email" class="form-control form-control-lg" name="email" id="email"
@@ -87,10 +87,10 @@
                             <label for="confirmpassword">Confirm Your Password</label>
                             <input type="password" class="form-control form-control-lg" name="confirmpassword"
                                 id="confirmpassword" autocomplete="off" placeholder="Confirm Password">
-                        </div> -->
+                        </div>
 
                         <div class="d-grid gap-3 mb-3">
-                            <!-- <input type="submit" class="btn btn-lg btn-block btn-outline-primary" value="Register" /> -->
+                            <input type="submit" class="btn btn-lg btn-block btn-outline-primary" value="Register" />
                             <a class="btn btn-lg btn-success" href="/google">Continue With Google</a>
                         </div>
 
