--- a/web-new/views/new-post.ejs
+++ b/web-new/views/new-post.ejs
@@ -1,29 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font  -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@500&display=swap" rel="stylesheet">
-  <!-- Bootstrap CDN  -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <title>News Sites</title>
-  <style>
-    body {
-      font-family: 'Recursive', sans-serif;
-      font-size: larger;
-    }
 
-    .customborder {
-      border-radius: 2%;
-      border: 2px solid #E95420;
-    }
-  </style>
+  <title>News Sites</title>
 </head>
+<style>
+  body {
+    font-family: 'Recursive', sans-serif;
+    font-size: larger;
+  }
+</style>
 
 <body>
 
@@ -36,39 +32,38 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/profile">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
+          <% if(logged){ %>
+            <li class="nav-item">
+              <a class="nav-link" href="/profile">Profile</a>
+            </li>
+            <% } %>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- navbar end  -->
 
-
-  <div class="container">
-    <h1 class="text-center p-3">Your Profile</h1>
-
-    <div class="card" style="width: 28rem;">
-      <!-- <img
-                            src="https://images.pexels.com/photos/917494/pexels-photo-917494.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                            class="card-img-top" alt="..."> -->
-      <div class="card-body">
-        <h3 class="card-title">
-          <%= username %>
-        </h3>
-
+  <div class="container py-3">
+    <% if(logged){ %>
+      <div>
+        <form action="/posts/new" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <div class="mb-3">
+            <label for="des">Content</label>
+            <input type="des" class="form-control form-control-lg" name="des" id="des" autocomplete="off"
+              placeholder="Content">
+          </div>
+          <input type="submit" class="btn btn-lg btn-block btn-outline-primary" value="Thêm" />
+        </form>
       </div>
-    </div>
-
+      <% } %>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
