--- a/web-new/views/new-detail.ejs
+++ b/web-new/views/new-detail.ejs
@@ -53,12 +53,12 @@
     <div class="container py-3">
         <% if(logged){ %>
             <div>
-                <form action="/posts/new" method="POST">
+                <form method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <div class="mb-3">
                         <label for="des">Content</label>
                         <input type="des" class="form-control form-control-lg" name="des" id="des" autocomplete="off"
-                            placeholder="Content" value="">
+                            placeholder="Content" value="<%= postByID.des %>">
                     </div>
                     <input type="submit" class="btn btn-lg btn-block btn-outline-primary" value="Sửa" />
                 </form>
@@ -69,7 +69,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
